# TILT-website

./: .htaccess  .htaccess.txt  404.md  README.md  pyproject.toml  qrcode_maker.py  website.py
templates/: 403.html  donations.html  index.html  questions.html  response.html  thnky.html
templates/err/: 404.html
templates/error-pages/: 404.html
templates/static/script/: betterscript.js
templates/static/servers/: getform.js  getform.php
templates/static/styles/: betterstyle.css
